adds end-to-end components and tests

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,2 +1,18 @@
 # generic messages
 system.error=100;EN-A system error occurred. Please try again later with a backoff policy or contact us, we are working on it!
+message.key.not.found=101;EN-An error occured. This error deserves better description, we are working on it!
+
+# request validation messages
+validation.request.not.present=110;EN-Request is mandatory!
+validation.request.field.not.present=111;EN-{0} is mandatory field!
+validation.request.field.string.size.not.valid=112;EN-{0} field must have {1} chars!
+validation.request.field.pitId.not.inRange=113;EN-pitId field must be between 1 - 14!
+validation.request.field.pitId.is.a.kalah=114;EN-Given pitId is a kalah. You cannot select a kalah to make a move!
+validation.request.http.message.not.readable=115;EN-Request syntax is not valid!
+validation.request.http.verb.not.supported=116;EN-Wrong http verb to hit the endpoint!
+
+# business validation messages
+validation.business.move.maker.not.valid=150;EN-It's your opponent's turn to make a move!
+validation.business.selected.pit.owner.not.valid=151;EN-Selected pit to make a move is not your. Please choose from your own pits to move!
+validation.business.selected.pit.has.no.stones=152;EN-Selected pit to make a move has no stones. Please choose from others to move!
+validation.business.game.not.found=153;EN-There is no available game for given gameId!
