--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -1,2 +1,18 @@
 # generic messages
 system.error=100;NL-A system error occurred. Please try again later with a backoff policy or contact us, we are working on it!
+message.key.not.found=101;NL-An error occured. This error deserves better description, we are working on it!
+
+# request validation messages
+validation.request.not.present=110;NL-Request is mandatory!
+validation.request.field.not.present=111;NL-{0} is mandatory field!
+validation.request.field.string.size.not.valid=112;NL-{0} field must have {1} chars!
+validation.request.field.pitId.not.inRange=113;NL-pitId field must be between 1 - 14!
+validation.request.field.pitId.is.a.kalah=114;NL-Given pitId is a kalah. You cannot select a kalah to make a move!
+validation.request.http.message.not.readable=115;NL-Request syntax is not valid!
+validation.request.http.verb.not.supported=116;NL-Wrong http verb to hit the endpoint!
+
+# business validation messages
+validation.business.move.maker.not.valid=150;NL-It's your opponent's turn to make a move!
+validation.business.selected.pit.owner.not.valid=151;NL-Selected pit to make a move is not your. Please choose from your own pits to move!
+validation.business.selected.pit.has.no.stones=152;NL-Selected pit to make a move has no stones. Please choose from others to move!
+validation.business.game.not.found=153;NL-There is no available game for given gameId!
